tests/NormalTests/paczka1/fuzzy1/67665897.err
Error in line 1: LyS S984 20,0
Error in line 11: iLRhEk A511 78,3
Error in line 4: LRAF7egp S984 4,6
Error in line 14: iLRhEk A402 56,6
Error in line 19: rtqpqTSd A819 92,25
Error in line 23: rtqpqTSd A402 10,0
Error in line 25: A819 S984 73,0
Error in line 21: LyS S984 8,3
Error in line 37: A819 A819 69,94
